# citybehavex

./: .gitattributes  .gitignore  AGENTS.md  CALIBRATION.md  Cargo.toml  NOTICE  README.md  RUST_BACKEND_MIGRATION.md  ablation.md  clippy.toml  pyproject.toml  tei_docker_commands.md
.github/workflows/: static-demo-pages.yml
citybehavex/: __init__.py  __main__.py  activities.py  agent_profiles.py  cityview.py  cli.py  config.py  diaries.py  embeddings.py  llm_diaries.py  profiles.py  reports.py  schedule_ddcrp.py  simulate.py  simulation.py  simulation_core.py  social_graph.py  tessellation.py  trip_ditras.py  trip_sts_epr.py
citybehavex-core/: Cargo.toml
citybehavex-core/src/: h3_batch.rs  lib.rs  network_graph.rs  roads.rs
citybehavex-py/: Cargo.toml
citybehavex-py/src/: ditras_trip.rs  lib.rs  simulation_core.rs  trip_ditras_core.rs  trip_sts_epr.rs
citybehavex-py/src/simulation_core/: activity.rs  engine.rs  h3_batch.rs  inputs.rs  network_graph.rs  outputs.rs  py_interface.rs  roads.rs  social.rs  types.rs
citybehavex-web/: Cargo.toml
citybehavex-web/src/: cache.rs  columns.rs  config.rs  datasource.rs  experiments.rs  home_work.rs  main.rs  models.rs  payload.rs
citybehavex-web/src/comparison/: activity.rs  ecdf.rs  features.rs  filters.rs  h3.rs  metric_row.rs  metrics.rs  micro_activity.rs  mobility_laws.rs  mod.rs  panel.rs  stvd.rs  trajectory.rs  transport.rs  util.rs  visits.rs
citybehavex-web/src/comparison/sections/: metrics.rs  mod.rs  motifs.rs
citybehavex-web/src/routes/: charts.rs  experiments.rs  mod.rs  timeline.rs
citybehavex-web/src/settings/: activities.rs  catalog.rs  diaries.rs  embedding.rs  llm.rs  mod.rs  profiles.rs  reports.rs  roads.rs  schedule.rs  simulation.rs  social.rs  tessellation.rs
citybehavex/activities/: __init__.py  alignment.py  catalog.py  config.py  poi_semantic.py
citybehavex/category/: category_mapping.py  unique_categories.csv
citybehavex/config/: __init__.py  io.py  root.py
citybehavex/embedding/: __init__.py  config.py  service.py
citybehavex/llm/: __init__.py  client.py  config.py  server.py
citybehavex/llm_diaries/: __init__.py  cache.py  client.py  config.py  distribution.py  generator.py  models.py  motifs.py  parsing.py  prompts.py  training.py
citybehavex/math/: __init__.py  distributions.py
citybehavex/metrics/: __init__.py  road_distance.py
citybehavex/profiles/: __init__.py  agents.py  calibration.py  coherence_alignment.py  config.py  metrics.py  ownership_alignment.py
citybehavex/reports/: __init__.py  comparison.py  config.py  network_validation.py
citybehavex/roads/: __init__.py  builder.py  config.py  speeds.py
citybehavex/schedules/: __init__.py  alignment.py  config.py  ddcrp.py
citybehavex/simulation/: __init__.py  config.py  core.py  runner.py  social_graph.py
citybehavex/social/: config.py
citybehavex/tessellation/: __init__.py  builder.py  config.py
cityview/: Cargo.toml
cityview/src/: main.rs
configs/: gparis_ditras.yaml  gparis_simulation.yaml  gparis_simulation_core.yaml  gparis_simulation_core_alignment.yaml  gparis_sts_epr.yaml  shanghai_simulation.yaml  shanghai_simulation_500sample.yaml  yjmob2_simulation.yaml  yjmob_simulation.yaml
configs/ablations/: gparis_half.yaml  shanghai_half.yaml  yjmob2_half.yaml  yjmob_half.yaml
configs/ablations/gparis/: gparis_no_feedback.yaml  gparis_no_micro_sched.yaml  gparis_no_profile.yaml  (+2 more)
data/: gparis_simulation_core_trajectories_20260703T111713_social_network.json
data/llm_diaries_gparis/: diary_embeddings.npz  validated_diaries.json  validated_diaries_weekday.json  validated_diaries_weekend.json
data/llm_diaries_shanghai/: validated_diaries_weekday.json  validated_diaries_weekend.json
data/llm_diaries_yjmob/: validated_diaries_weekday.json  validated_diaries_weekend.json
data/llm_diaries_yjmob2/: validated_diaries_emergency.json  validated_diaries_weekday.json  validated_diaries_weekend.json
notebooks/00_ile_de_france_exploration/: 02_mtus_exploration.ipynb  03_home_locations_individuals.ipynb  04_mtus_comparision.ipynb
notebooks/01_yjmob_preparation/: 01_eda.ipynb  01_preprocessing.ipynb  02_eda.ipynb  03_disaster_preparation.ipynb
notebooks/02_shanghai_preparation/: 02_eda.ipynb
notebooks/03_yjmob2_preparation/: 01_preprocessing.ipynb
notebooks/04_reranker_testing/: .gitignore  01_eda.ipynb
notebooks/05_poi_activity_mask/: 01_overture_poi_activity_clusters.ipynb
scripts/: aggregate_ablation_results.py  backfill_reports.sh  benchmark_web_backends.py  build_frontend.sh  compare_web_backends.py  convert_mtus_time_use.py  export_static_web_demo.py  make_ablation_config.py  recompute_all_reports.sh  recompute_yjmob_reports.sh  run_ablation.sh  run_full_sweep.sh  run_gparis_ablation_sweep.sh  serve_schedule_aligner.py  simulate_gparis_poi.sh  simulate_shanghai.sh  split_real_population.py  train_modernbert_activity_aligner.py  train_modernbert_profile_coherence_aligner.py  train_modernbert_schedule_aligner.py  train_modernbert_vehicle_ownership_aligner.py  update_local_citybehavex.sh  update_local_fkmob.sh  update_local_skmob.sh
tests/: test_activities_config.py  test_activity_aligner_script.py  test_activity_alignment.py  test_cli.py  test_config.py  test_ditras.py  test_llm_diaries.py  test_metrics_road_distance.py  test_network_validation.py  test_profile_coherence_aligner_script.py  test_profile_coherence_alignment.py  test_profile_coherence_repair.py  test_profiles_calibration.py  test_profiles_metrics.py  test_reports.py  test_runner_streaming.py  test_schedule_aligner_script.py  test_schedule_alignment.py  test_schedule_ddcrp.py  test_simulation_core.py  test_social_graph.py  test_static_demo_export.py  test_sts_epr.py  test_tessellation.py  test_timeline_api.py  test_timeline_data.py  test_vehicle_ownership_aligner_script.py  test_vehicle_ownership_alignment.py  test_web_cache.py  test_web_experiments_api.py  test_web_payload.py
web/: DESIGN.md  README.md  demo_export.yaml
web/frontend/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
(+1660 files in other folders)
