[workspace]
members = ["citybehavex-py"]
resolver = "2"

[profile.release]
# 1. Lower the optimization slightly (3 is max, 2 is still very fast but compiles quicker)
opt-level = 2

# 2. Maximize parallel compilation (splits the work across all your CPU cores)
codegen-units = 256

# 3. Disable Link-Time Optimization (This is the #1 cause of slow release compiles)
lto = "off"


[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
