[project]
name = "citybehavex"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "contextily>=1.7.0",
    "duckdb>=1.5.3",
    "folium>=0.20.0",
    "geopandas>=1.1.3",
    "h3>=4.4.2",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "jupyterlab>=4.5.7",
    "mapclassify>=2.10.0",
    "matplotlib>=3.10.9",
    "notebook>=7.5.6",
    "plotly>=6.7.0",
    "polars>=1.40.1",
    "pyarrow>=24.0.0",
    "pyproj>=3.7.2",
    "requests>=2.34.2",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "shapely>=2.1.2",
    "skmob-vis",
    "skmob2[data,generation,tessellation]",
    "tqdm>=4.67.3",
    "typer>=0.12.0",
]

[project.scripts]
citybehavex = "citybehavex.simulate:app"

[tool.uv.sources]
skmob2 = { path = "../skmob2", editable = true }
skmob-vis = { path = "../skmob-viz", editable = true }
