[build-system]
requires = ["maturin>=1.13,<2.0"]
build-backend = "maturin"

[project]
name = "citybehavex"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "contextily>=1.7.0",
    "duckdb>=1.5.3",
    "folium>=0.20.0",
    "geopandas>=1.1.3",
    "h3>=4.4.2",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "jupyterlab>=4.5.7",
    "mapclassify>=2.10.0",
    "matplotlib>=3.10.9",
    "notebook>=7.5.6",
    "plotly>=6.7.0",
    "polars>=1.40.1",
    "pydantic>=2.0.0",
    "pyarrow>=24.0.0",
    "pyproj>=3.7.2",
    "pyyaml>=6.0.0",
    "requests>=2.34.2",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "shapely>=2.1.2",
    "skmob-vis",
    "skmob2[data,generation,tessellation,diversity]",
    "tqdm>=4.67.3",
    "typer>=0.12.0",
]

[project.optional-dependencies]
# Auto-launching a local embedding server for ddCRP schedule selection needs vLLM
# (heavy, GPU). Without this extra, set `embedding.base_url` to a running server,
# rely on cached `diary_embeddings.npz`, or set `embedding.enabled: false` to fall
# back to identity similarity (exact preferential return).
embeddings = [
    # Keep vLLM on the CUDA 12.4/PyTorch 2.6 line for compatibility with
    # systems whose NVIDIA driver reports CUDA driver API 12040.
    "vllm>=0.8.5,<0.9.0",
    "torch==2.6.0",
    "transformers>=4.51.1,<5.0.0",
]

[project.scripts]
citybehavex = "citybehavex.cli:app"

[tool.maturin]
module-name = "citybehavex._core"
python-source = "."
manifest-path = "citybehavex-py/Cargo.toml"
include = ["citybehavex/category/*.csv"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.uv.sources]
skmob2 = { path = "../skmob2", editable = true }
skmob-vis = { path = "../skmob-viz", editable = true }
