[package]
name = "citybehavex-py"
version = "0.1.0"
edition = "2024"

[lib]
name = "citybehavex"
crate-type = ["cdylib"]

[dependencies]
# default-features = false drops the C/SIMD-backed crates (numkong, wass); the
# trip-DITRAS only needs the pure-Rust models/utils (od, shared, haversine).
skmob2-core = { path = "../../skmob2/skmob2-core", default-features = false }
pyo3 = "0.28.2"
numpy = "0.28.0"
rand = "0.8"
rand_xoshiro = "0.6"
rayon = "1"
# Contraction hierarchies for car routing over the Overture road graph: prepare
# once per run, then each trip's shortest path is a fast bidirectional search
# instead of a fresh Dijkstra.
fast_paths = "1"
